파일 API 엔드포인트 리팩토링 (#31)